--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "bcryptjs": "^3.0.3",
+    "canvas": "^3.2.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
