--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
+    "browser-image-compression": "^2.0.2",
     "canvas": "^3.2.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -20,8 +22,10 @@
     "jspdf-autotable": "^5.0.2",
     "katex": "^0.16.27",
     "lucide-react": "^0.555.0",
+    "mammoth": "^1.11.0",
     "mongoose": "^9.0.0",
     "next": "16.0.7",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
